--- a/index.html
+++ b/index.html
@@ -30,16 +30,24 @@
                         alt="Logo" class="logo-black">
                 </a>
 
-                <ul class="menu">
-                    <li class="menu__item"><a href="#">Home</a></li>
-                    <li class="menu__item"><a href="#">About</a></li>
-                    <li class="menu__item"><a href="#">Services</a></li>
-                    <li class="menu__item"><a href="#">Team</a></li>
-                    <li class="menu__item"><a href="#">Portfolio</a></li>
-                    <li class="menu__item"><a href="#">Price</a></li>
-                    <li class="menu__item"><a href="#">Blog</a></li>
-                    <li class="menu__item"><a href="#">Contact</a></li>
-                </ul>
+                <div class="burger">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+
+                <div class="burger-menu">
+                    <ul class="menu">
+                        <li class="menu__item"><a href="#">Home</a></li>
+                        <li class="menu__item"><a href="#">About</a></li>
+                        <li class="menu__item"><a href="#">Services</a></li>
+                        <li class="menu__item"><a href="#">Team</a></li>
+                        <li class="menu__item"><a href="#">Portfolio</a></li>
+                        <li class="menu__item"><a href="#">Price</a></li>
+                        <li class="menu__item"><a href="#">Blog</a></li>
+                        <li class="menu__item"><a href="#">Contact</a></li>
+                    </ul>
+                </div>
 
             </div>
         </nav>
