--- a/index.html
+++ b/index.html
@@ -18,6 +18,22 @@
 
 <body>
 
+    <div class="container">
+        <ul class="addres">
+            <li>
+                <i class="fas fa-map-marker-alt"></i>
+                <p>Санкт-Петербург, Лахтинский просп. д. 85, корп. 3</p>
+            </li>
+            <li>
+                <i class="fas fa-phone-alt"></i>
+                <div>
+                    <a href="#">8 (812) 317-55-21</a>
+                    <p>Ежедневно с 09.00 до 21.00</p>
+                </div>
+            </li>
+        </ul>
+    </div>
+
     <header class="header">
 
         <nav>
@@ -954,6 +970,19 @@
                     </form>
                 </div>
 
+            </div>
+        </div>
+
+        <div class="privacy">
+            <div class="container">
+                <p>Copyright @ 2020 Soxolo. All rights reserved</p>
+
+                <ul class="footer-menu list-group">
+
+                    <li><a href="#"> Terms &amp; Conditions</a></li>
+                    <li><a href="#"> Privacy Policy</a></li>
+
+                </ul>
             </div>
         </div>
 
