--- a/index.html
+++ b/index.html
@@ -988,6 +988,10 @@
 
     </footer>
 
+    <a href="#" class="call-pulse">
+        <i class="fas fa-phone-alt"></i>
+    </a>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="./js/owl.carousel.min.js"></script>
     <script src="./js/main.js"></script>
