--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
                 </a>
 
                 <div class="burger">
-                    <div></div>
-                    <div></div>
-                    <div></div>
+                    <div class="burger-item"></div>
+                    <div class="burger-item"></div>
+                    <div class="burger-item"></div>
                 </div>
 
                 <div class="burger-menu">
@@ -991,6 +991,20 @@
     <a href="#" class="call-pulse">
         <i class="fas fa-phone-alt"></i>
     </a>
+
+    <div class="modal">
+        <div class="call">
+
+            <h5>REQUEST A CALL</h5>
+            <form>
+                <input type="number">
+                <p>Укажите ваш номер телефона и мы свяжемся с вами в ближайшее время.</p>
+                <button>Call me back!</button>
+            </form>
+            <span><i class="fas fa-times"></i></span>
+
+        </div>
+    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="./js/owl.carousel.min.js"></script>
