--- a/index.html
+++ b/index.html
@@ -988,16 +988,16 @@
 
     </footer>
 
-    <a href="#" class="call-pulse">
+    <span class="call-pulse">
         <i class="fas fa-phone-alt"></i>
-    </a>
+    </span>
 
     <div class="modal">
         <div class="call">
 
             <h5>REQUEST A CALL</h5>
             <form>
-                <input type="number">
+                <input type="number" placeholder="+7">
                 <p>Укажите ваш номер телефона и мы свяжемся с вами в ближайшее время.</p>
                 <button>Call me back!</button>
             </form>
