--- a/index.html
+++ b/index.html
@@ -526,6 +526,255 @@
             </div>
         </div>
 
+        <div class="cars">
+            <div class="container">
+                <ul>
+
+                    <li>
+                        <div class="inner">
+                            <img src="./images/Chevrolet_8.png" alt="Car">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner">
+                            <img src="./images/Citroen_10.png" alt="Car">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner">
+                            <img src="./images/Chrysler_9.png" alt="Car">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner">
+                            <img src="./images/BMW_4.png" alt="Car">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner">
+                            <img src="./images/Infiniti_25.png" alt="Car">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner">
+                            <img src="./images/Lexus_34.png" alt="Car">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner">
+                            <img src="./images/Mercedes_40.png" alt="Car">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner">
+                            <img src="./images//Dacia_11.png" alt="Car">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner">
+                            <img src="./images/Chevrolet_8.png" alt="Car">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner">
+                            <img src="./images/Citroen_10.png" alt="Car">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner">
+                            <img src="./images/Chrysler_9.png" alt="Car">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner">
+                            <img src="./images/BMW_4.png" alt="Car">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner">
+                            <img src="./images/Infiniti_25.png" alt="Car">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner">
+                            <img src="./images/Lexus_34.png" alt="Car">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner">
+                            <img src="./images/Mercedes_40.png" alt="Car">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner">
+                            <img src="./images//Dacia_11.png" alt="Car">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner">
+                            <img src="./images/Chevrolet_8.png" alt="Car">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner">
+                            <img src="./images/Citroen_10.png" alt="Car">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner">
+                            <img src="./images/Chrysler_9.png" alt="Car">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner">
+                            <img src="./images/BMW_4.png" alt="Car">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner">
+                            <img src="./images/Infiniti_25.png" alt="Car">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner">
+                            <img src="./images/Lexus_34.png" alt="Car">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner">
+                            <img src="./images/Mercedes_40.png" alt="Car">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner">
+                            <img src="./images//Dacia_11.png" alt="Car">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner">
+                            <img src="./images/Chevrolet_8.png" alt="Car">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner">
+                            <img src="./images/Citroen_10.png" alt="Car">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner">
+                            <img src="./images/Chrysler_9.png" alt="Car">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner">
+                            <img src="./images/BMW_4.png" alt="Car">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner">
+                            <img src="./images/Infiniti_25.png" alt="Car">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner">
+                            <img src="./images/Lexus_34.png" alt="Car">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner">
+                            <img src="./images/Mercedes_40.png" alt="Car">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner">
+                            <img src="./images//Dacia_11.png" alt="Car">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner">
+                            <img src="./images/Chevrolet_8.png" alt="Car">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner">
+                            <img src="./images/Citroen_10.png" alt="Car">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner">
+                            <img src="./images/Chrysler_9.png" alt="Car">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner">
+                            <img src="./images/BMW_4.png" alt="Car">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner">
+                            <img src="./images/Infiniti_25.png" alt="Car">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner">
+                            <img src="./images/Lexus_34.png" alt="Car">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner">
+                            <img src="./images/Mercedes_40.png" alt="Car">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner">
+                            <img src="./images//Dacia_11.png" alt="Car">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner">
+                            <img src="./images/Chevrolet_8.png" alt="Car">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner">
+                            <img src="./images/Citroen_10.png" alt="Car">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner">
+                            <img src="./images/Chrysler_9.png" alt="Car">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner">
+                            <img src="./images/BMW_4.png" alt="Car">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner">
+                            <img src="./images/Infiniti_25.png" alt="Car">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner">
+                            <img src="./images/Lexus_34.png" alt="Car">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner">
+                            <img src="./images/Mercedes_40.png" alt="Car">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="inner">
+                            <img src="./images//Dacia_11.png" alt="Car">
+                        </div>
+                    </li>
+
+                </ul>
+            </div>
+        </div>
+
         <div class="marketing">
             <div class="container">
 
@@ -997,9 +1246,9 @@
 
             <h5>REQUEST A CALL</h5>
             <form>
-                <input type="number" placeholder="+7">
+                <input type="number" placeholder="+7" class="call-input">
                 <p>Укажите ваш номер телефона и мы свяжемся с вами в ближайшее время.</p>
-                <button>Call me back!</button>
+                <button class="call-btn">Call me back!</button>
             </form>
             <span><i class="fas fa-times"></i></span>
 
