--- a/index.html
+++ b/index.html
@@ -1246,7 +1246,7 @@
 
             <h5>REQUEST A CALL</h5>
             <form>
-                <input type="number" placeholder="+7" class="call-input">
+                <input type="text" placeholder="+7" class="call-input" onkeypress="Number_Only(event)">
                 <p>Укажите ваш номер телефона и мы свяжемся с вами в ближайшее время.</p>
                 <button class="call-btn">Call me back!</button>
             </form>
