--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                     <p>Ежедневно с 09.00 до 21.00</p>
                 </div>
             </li>
+            <li>
+                <button class="call-btn">Call me back!</button>
+            </li>
         </ul>
     </div>
 
@@ -77,6 +80,7 @@
                     et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas
                     accumsan lacus vel facilisis.
                 </p>
+                <button class="call-btn">Call me back!</button>
 
             </div>
         </div>
