--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div>
             </li>
             <li>
-                <button class="call-btn">Call me back!</button>
+                <button class="call-btn call-back">Call me back!</button>
             </li>
         </ul>
     </div>
@@ -80,7 +80,7 @@
                     et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas
                     accumsan lacus vel facilisis.
                 </p>
-                <button class="call-btn">Call me back!</button>
+                <button class="call-btn call-back">Call me back!</button>
 
             </div>
         </div>
@@ -1241,7 +1241,7 @@
 
     </footer>
 
-    <span class="call-pulse">
+    <span class="call-pulse call-back">
         <i class="fas fa-phone-alt"></i>
     </span>
 
@@ -1252,7 +1252,7 @@
             <form>
                 <input type="text" placeholder="+7" class="call-input" onkeypress="Number_Only(event)">
                 <p>Укажите ваш номер телефона и мы свяжемся с вами в ближайшее время.</p>
-                <button class="call-btn">Call me back!</button>
+                <button class="call-btn call-back">Call me back!</button>
             </form>
             <span><i class="fas fa-times"></i></span>
 
