--- a/index.html
+++ b/index.html
@@ -1252,7 +1252,7 @@
             <form>
                 <input type="text" placeholder="+7" class="call-input" onkeypress="Number_Only(event)">
                 <p>Укажите ваш номер телефона и мы свяжемся с вами в ближайшее время.</p>
-                <button class="call-btn call-back">Call me back!</button>
+                <button class="call-btn">Call me back!</button>
             </form>
             <span><i class="fas fa-times"></i></span>
 
